fixing gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,7 @@ body {
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 1.8rem;
 }
 .card-social-link {
   display: flex;
