--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -33,7 +33,7 @@
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 1.6rem;
+    gap: 1.8rem;
     &-link {
       display: flex;
       justify-content: center;
